--- a/FrameworkControlJs1/Template.html
+++ b/FrameworkControlJs1/Template.html
@@ -1,3 +1,4 @@
 ﻿<div class="framework-control-js1-template tchmi-box">
-    <h1>This is some text inside the FrameworkControlJs2</h1>
+    <h2>This is my custom controls text</h2>
+    <input type="button" value="Button text" onclick="myCustomFunction()"/>
 </div>
