Working on Settings Views

--- a/FrameworkControlTesting/Template.html
+++ b/FrameworkControlTesting/Template.html
@@ -1,4 +1,28 @@
-﻿<div class="framework-control-testing-template tchmi-box">
-    <button class="buttonClass testClass">Test Button</button>
-    <input type="text" name="test" value="" placeholder="placeholder" />
-</div>
+﻿<ul id="myUL">
+    <li>
+        <span class="caret caret-down">Machine</span>
+        <ul class="nested active">
+            <li>
+                <span class="caret caret-down">In Mold Drying</span>
+                <ul class="nested active">
+                    <li>Bottom mold A</li>
+                    <li>Top mold A</li>
+                    <li>Transfermold</li>
+                    <li>Machine Pond</li>
+                    <li>Bottom Mold B</li>
+                    <li>Top mold B</li>
+                </ul>
+            </li>
+        </ul>
+        <ul class="nested active">
+            <li>
+                <span class="caret caret-down">Product handling</span>
+                <ul class="nested active">
+                    <li>Gantry A</li>
+                    <li>Gantry B</li>
+                    <li>Product Conveyor</li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+</ul>
