Made the service pages as far as I can with the current version of the existing HMI.

--- a/FrameworkControlTesting/Template.html
+++ b/FrameworkControlTesting/Template.html
@@ -1,6 +1,8 @@
 ﻿<ul id="myUL">
     <li>
+        <!-- class: caret for the node that has children, class: caret-down shows the caret pointing down for when expanded -->
         <span class="caret caret-down">Machine</span>
+        <!-- class: nested means it's a child element, class: active means it's expanded -->
         <ul class="nested active">
             <li>
                 <span class="caret caret-down">In Mold Drying</span>
